added team logos, sponsor fix, small fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -11448,6 +11448,19 @@ footer.footer .social-link {
   transition: background-color 0.15s ease-in-out;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
+
+.landing-socials{
+  display: block;
+  text-decoration: none;
+  height: 4rem;
+  width: 4rem;
+  line-height: 4.3rem;
+  font-size: 1.5rem;
+  background-color: #1D809F;
+  transition: background-color 0.15s ease-in-out;
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
 footer.footer .social-link:hover {
   background-color: #155d74;
   text-decoration: none;
@@ -11592,3 +11605,26 @@ img, svg {
 .service-icon.rounded-circle {
   overflow: hidden;
 }
+.social-link-circle {
+  border: 2px solid white;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wolt{
+  float: left;
+}
+.portfolio-item .img-container{
+  width:50%;
+  float:left;
+}
+.portfolio-item .caption-content{
+  width:50%;
+  float:left;
+}
+
+
